# RuntimeDDIs

./: README.md
runtime_safety_assurance_ros_packages/consert_evaluation/: CMakeLists.txt  package.xml  setup.py
runtime_safety_assurance_ros_packages/consert_evaluation/msg/: ActiveGuarantee.msg
runtime_safety_assurance_ros_packages/consert_evaluation/scripts/: __init__.py  consert_evaluation_node.py  consert_evaluation_wrapper.py
runtime_safety_assurance_ros_packages/consert_evaluation/scripts/generatedThriftFiles/: ConSertEvaluationService-remote  ConSertEvaluationService.py  __init__.py  constants.py  ttypes.py
runtime_safety_assurance_ros_packages/consert_evaluation/src/epsilon_scripts/: AddContributingSystemToSystemOfSystemModel.eol  EvaluateConSerts.eol  createComponentComposition.eol  validateInputModels.evl
runtime_safety_assurance_ros_packages/consert_evaluation/src/metamodel/: allInOneMetaModel.ecore
runtime_safety_assurance_ros_packages/rte_list_monitor/: CMakeLists.txt  package.xml  setup.py
runtime_safety_assurance_ros_packages/rte_list_monitor/scripts/: rte_list_monitor_node.py
runtime_safety_assurance_ros_packages/rte_monitor/: CMakeLists.txt  package.xml
runtime_safety_assurance_ros_packages/rte_monitor/include/: buffer.hpp  constants.hpp  globals.hpp  qtvisualizer.hpp
runtime_safety_assurance_ros_packages/rte_monitor/include/smile/: abn.h  autolink.h  bkgndknowledge.h  bs.h  build.txt  caselibrary.h  cidefinition.h  constants.h  datagenerator.h  dataset.h  dbcml.h  defcpt.h  defdemorgan.h  defequation.h  deflist.h  defmau.h  defnoisyadder.h  defnoisymax.h  deftable.h  deftruthtable.h  diag_network.h  discretizer.h  dmatrix.h  doublearray.h  dslobject.h  em.h  errors.h  errorstrings.h  essentialsearch.h  expat_copying.h  extradefinition.h  general.h  generalclases.h  generalequation.h  idarray.h  intarray.h  mst.h  nb.h  network.h  node.h  (+21 more)
runtime_safety_assurance_ros_packages/rte_monitor/include/smile/smile_license/: README.txt  smile_license.h
runtime_safety_assurance_ros_packages/rte_monitor/msg/: ChangedSimulationState.msg  ConfidenceInputEvent.msg  ConfidenceInputEventList.msg  ConfidenceInputEventWEnc.msg  Configuration.msg  RtEList.msg  RtEValue.msg  RuntimeEvidence.msg
runtime_safety_assurance_ros_packages/rte_monitor/src/: ConCertConcept.xdsl  monitor.cpp
