<?xml version="1.0"?>
<package format="2">
  <name>rte_monitor</name>
  <version>0.0.1</version>
  <description>Runtime Evidence Monitoring for the Platooning Simulator</description>

  <maintainer email="I.Sorokos@hull.ac.uk">Ioannis Sorokos</maintainer>

  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rte_monitor</url> -->

  <author email="I.Sorokos@hull.ac.uk">Ioannis Sorokos</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
